Opened 13 years ago
Closed 13 years ago
#3195 closed defect (fixed)
Can't detect AAC audio in MPEG-PS format
| Reported by: | zoominla | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | mpegps aac |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
How to reproduce:
C:\Users\zoominlazhu>D:\avTools\ffmpeg\ffmpeg-20131202\bin\ffmpeg.exe -i F:\vide
o\problem\hang\kasi.mpg -vf scale=480:-1 -y e:\test.mp4
ffmpeg version N-58699-ge3d7a39 Copyright (c) 2000-2013 the FFmpeg developers
built on Dec 1 2013 22:01:48 with gcc 4.8.2 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aa
cenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavp
ack --enable-libx264 --enable-libxavs --enable-libxvid --enable-zlib
libavutil 52. 56.100 / 52. 56.100
libavcodec 55. 44.100 / 55. 44.100
libavformat 55. 22.100 / 55. 22.100
libavdevice 55. 5.102 / 55. 5.102
libavfilter 3. 91.100 / 3. 91.100
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 17.104 / 0. 17.104
libpostproc 52. 3.100 / 52. 3.100
[mp3 @ 041ccf60] Header missing
Last message repeated 8 times
[mpeg @ 02662de0] decoding for stream 1 failed
[mpeg @ 02662de0] Could not find codec parameters for stream 1 (Audio: mp2, 0 ch
annels, s16p): unspecified frame size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, mpeg, from 'F:\video\problem\hang\kasi.mpg':
Duration: 00:00:31.10, start: 0.000000, bitrate: 19585 kb/s
Stream #0:0[0x1e0]: Video: h264 (Main), yuv420p(tv), 1920x1080 [SAR 1:1 DAR
16:9], 30 fps, 30 tbr, 90k tbn, 60 tbc
Stream #0:1[0x1c0]: Audio: mp2, 0 channels, s16p
[libx264 @ 04fa2a60] using SAR=1/1
[libx264 @ 04fa2a60] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX
[libx264 @ 04fa2a60] profile High, level 2.1
[libx264 @ 04fa2a60] 264 - core 140 r2377 1ca7bb9 - H.264/MPEG-4 AVC codec - Cop
yleft 2003-2013 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deb
lock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 m
e_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chro
ma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1
interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1
b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scene
cut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin
=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
Output #0, mp4, to 'e:\test.mp4':
Metadata:
encoder : Lavf55.22.100
Stream #0:0: Video: h264 (libx264) ([33][0][0][0] / 0x0021), yuv420p, 480x27
0 [SAR 1:1 DAR 16:9], q=-1--1, 15360 tbn, 30 tbc
Stream mapping:
Press [q] to stop, ? for help
frame= 111 fps=0.0 q=29.0 size= 43kB time=00:00:01.76 bitrate= 199.9kbits/
frame= 184 fps=183 q=29.0 size= 409kB time=00:00:04.20 bitrate= 797.3kbits/
frame= 258 fps=171 q=29.0 size= 719kB time=00:00:06.66 bitrate= 883.1kbits/
frame= 340 fps=169 q=29.0 size= 1001kB time=00:00:09.40 bitrate= 872.3kbits/
frame= 412 fps=164 q=29.0 size= 1248kB time=00:00:11.80 bitrate= 866.2kbits/
frame= 490 fps=162 q=29.0 size= 1447kB time=00:00:14.40 bitrate= 823.4kbits/
frame= 563 fps=160 q=29.0 size= 1755kB time=00:00:16.83 bitrate= 854.1kbits/
frame= 636 fps=158 q=29.0 size= 2018kB time=00:00:19.26 bitrate= 858.2kbits/
frame= 711 fps=157 q=29.0 size= 2338kB time=00:00:21.76 bitrate= 880.0kbits/
frame= 796 fps=158 q=29.0 size= 2579kB time=00:00:24.60 bitrate= 858.7kbits/
frame= 903 fps=164 q=-1.0 Lsize= 2674kB time=00:00:30.03 bitrate= 729.3kbits
/s
video:2664kB audio:0kB subtitle:0 global headers:0kB muxing overhead 0.384850%
[libx264 @ 04fa2a60] frame I:17 Avg QP:23.55 size: 12137
[libx264 @ 04fa2a60] frame P:463 Avg QP:26.69 size: 4597
[libx264 @ 04fa2a60] frame B:423 Avg QP:28.78 size: 927
[libx264 @ 04fa2a60] consecutive B-frames: 20.8% 49.4% 2.3% 27.5%
[libx264 @ 04fa2a60] mb I I16..4: 10.2% 65.6% 24.2%
[libx264 @ 04fa2a60] mb P I16..4: 2.0% 6.9% 3.2% P16..4: 32.7% 20.2% 12.6%
0.0% 0.0% skip:22.4%
[libx264 @ 04fa2a60] mb B I16..4: 0.1% 0.3% 0.3% B16..8: 29.6% 6.6% 2.0%
direct: 1.7% skip:59.4% L0:35.6% L1:50.3% BI:14.1%
[libx264 @ 04fa2a60] 8x8 transform intra:58.7% inter:60.8%
[libx264 @ 04fa2a60] coded y,uvDC,uvAC intra: 72.5% 80.0% 51.7% inter: 22.0% 19.
1% 4.0%
[libx264 @ 04fa2a60] i16 v,h,dc,p: 38% 37% 6% 19%
[libx264 @ 04fa2a60] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 19% 20% 15% 5% 7% 9% 7%
8% 9%
[libx264 @ 04fa2a60] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 26% 17% 13% 6% 8% 10% 6%
8% 6%
[libx264 @ 04fa2a60] i8c dc,h,v,p: 46% 21% 25% 8%
[libx264 @ 04fa2a60] Weighted P-Frames: Y:10.4% UV:5.6%
[libx264 @ 04fa2a60] ref P L0: 63.2% 20.2% 11.1% 5.2% 0.4%
[libx264 @ 04fa2a60] ref B L0: 90.3% 9.1% 0.6%
[libx264 @ 04fa2a60] ref B L1: 98.6% 1.4%
[libx264 @ 04fa2a60] kb/s:724.74
FFMpeg generate test.mp4 without audio track. It complains to increase analyzeduration, I increase it to 20000000, still the same.
Change History (8)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
| Keywords: | mpeg aac added |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
follow-up: 5 comment:4 by , 13 years ago
Workaround would be to use -acodec aac but the output file is completely out-of-sync.
Do you know what created the sample?
follow-up: 7 comment:6 by , 13 years ago
Does any other application except vlc play the file?
Patch sent:
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/171850
comment:7 by , 13 years ago
Replying to cehoyos:
MediaInfo parses the a/v info correctly.
Media Player Classic also plays it fine.
Your patch works, thanks for your nice work!
comment:8 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed in af7562a0 - thank you for the report!
I opened ticket #3201 for the A/V desync issue.



The file is big, so I upload it and this is the download link:
http://mvlib.net/dl/clips/misdectec_aac.mpg