Ignore es_map_length when parsing mpeg program stream map.

Fixes ticket #3195.